bynkc/tests/fixtures/positive/125_http_put_path_and_body/src/items.bynk
context items

type ItemId = opaque String

type UpdateItem = {
  name: String,
}

type ItemView = {
  id: String,
  name: String,
}

service api from http {
  on PUT("/items/:id") (id: ItemId, body: UpdateItem)
      -> Effect[HttpResult[ItemView]] by v: Visitor {
    Ok(ItemView { id: id.raw, name: body.name })
  }
}
