bynkc/tests/fixtures/negative/258_ws_open_leak/src/s.bynk
context s
type UserId = opaque String
type ServerFrame = { text: String }
type ClientFrame = { text: String }
actor Participant { auth = Bearer(secret = "S"), identity = UserId }
service Gw from websocket(in: ClientFrame, out: ServerFrame) {
  on open () -> Effect[()] by user: Participant {
    ()
  }
}
